# priceparse_bot

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  env_example  prestart.sh  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
alembic/: env.py
alembic/versions/: f4ca36d009b6_initial.py
app/: exceptions.py
app/core/: base.py  config.py  db.py  decorators.py
app/models/: product.py
app/services/: import.py  parser.py
bot/: __main__.py
bot/core/: base.py  config.py  db.py  exceptions.py  utils.py
bot/handlers/: users.py
bot/locales/ru/: strings.ftl
bot/models/: __init__.py  product.py
bot/schemas/: __init__.py  product.py
bot/services/: import_data.py  parser.py
infra/: data_for_parser.xlsx  parseprice-bot.example.service
